--- a/src/styles/world-map.scss
+++ b/src/styles/world-map.scss
@@ -3,3 +3,42 @@
   height: 45rem;
   margin-top: 5rem;
 }
+
+.legend {
+  padding: .5rem;
+  border-radius: .3rem;
+  background-color: rgba(255, 255, 255, 0.75);
+  line-height: 18px;
+  color: #555;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+
+  .string-wrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: .4rem;
+    opacity: 0.7;
+    border-radius: 50%;
+  }
+
+  .cases {
+    background-color: red;
+  }
+
+  .recovered {
+    background-color: green;
+  }
+
+  .deaths {
+    background-color: grey;
+  }
+
+  // p {
+  //   line-height: 2rem;
+  // }
+}
