--- a/src/styles/world-map.scss
+++ b/src/styles/world-map.scss
@@ -1,3 +1,12 @@
+// .map-wrapper {
+  // display: flex;
+  // flex-direction: column;
+  // width: 65rem;
+  // height: 49rem;
+  // margin-top: 5rem;
+  // background-color: gray;
+// }
+
 #mapid {
   width: 65rem;
   height: 45rem;
@@ -40,4 +49,30 @@
   p {
     margin: .4rem;
   }
+}
+
+.control-layers {
+  display: flex;
+  // flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: .5rem;
+  border-radius: .3rem;
+  // height: 4rem;
+  background-color: #fff;
+  opacity: .8;
+
+  hr {
+    width: 4rem;
+  }
+}
+
+.group-value, .group-type, .group-time {
+  display: flex;
+  flex-direction: column;
+  // width: 15rem;
+}
+
+.btn {
+  margin: 0 3rem;
 }
