--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,11 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.grid {
+  display: flex;
+  flex-direction: row;
+  width: 100vh;
+  height: 100vh;
+  background-color:rgba(41, 38, 38, 0.5);
+}
