--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,10 @@
 @import './world-map.scss';
+@import './tables.scss';
 
-html {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-size: 16px;
 }
 
@@ -8,6 +12,4 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0;
-  padding: 0;
 }
