feat: remove html layout and create js layout in module createMapElements

--- a/src/styles/world-map.scss
+++ b/src/styles/world-map.scss
@@ -71,7 +71,7 @@
   }
 }
 
-.group-value, .group-type, .group-time {
+.group-value, .group-time {
   display: flex;
   flex-direction: column;
   // width: 15rem;
