--- a/src/styles/tables.scss
+++ b/src/styles/tables.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  outline: 2px solid silver;
+  outline: 1px solid silver;
 
   .select-block,
   .cases-by-country,
@@ -66,5 +66,45 @@
     justify-content: space-between;
 
     outline: 1px solid gray;
+  }
+}
+
+.table {
+  width: 500px;
+  padding: 8px;
+  outline: 1px solid silver;
+
+  .country-name {
+    width: 100%;
+
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+
+  table {
+    width: 100%;
+    border-spacing: 0;
+
+    tr {
+      td {
+        padding: 4px;
+        border-top: 1px solid silver;
+      }
+      td:first-child {
+        width: 40%;
+      }
+      td:last-child {
+        font-weight: bold;
+      }
+      .td-confirmed {
+        color: rgb(255, 174, 0);
+      }
+      .td-deaths {
+        color: red;
+      }
+      .td-recovered {
+        color: green;
+      }
+    }
   }
 }
