--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -1,34 +1,33 @@
 .grid {
-    position: relative;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
     flex-wrap: wrap;
     background-color:rgba(0, 0, 0, 1);
   }
 
   .head{
+    position: absolute;
     box-sizing: border-box;
-    margin-bottom: 10px;
+    top: 0;
     width: 100%;
-    height: 40px;
+    height: 30px;
+    text-align: center;
     border: 3px solid rgba(29, 21, 21, 0.719);
-    background-color:rgba(41, 38, 38, 0.5);
+    background-color:rgba(41, 38, 38, 1);
     order: -1;
   }
 
   .center{
     position: relative;
     box-sizing: border-box;
-    margin: 0px 10px 0px 10px;
+    margin: 40px 10px 0px 10px;
     display: flex;
-    height: 100vh;
+    height: 87vh;
+    flex-grow: 3;
     flex-direction: column;
-    justify-content: center;
     align-content: center;
-    flex-grow: 5;
     border: 3px solid rgba(29, 21, 21, 0.719);
     background-color:rgba(41, 38, 38, 1);
     order: 1;
@@ -36,21 +35,24 @@
   }
   .center_full{
     position: absolute;
+    margin: 0;
     width: 100%;
-    height: 100vh;
-    top: 50px;
+    height: 87vh;
+    top: 40px;
     z-index: 10000;
   }
 
   .left{
     position: relative;
     box-sizing: border-box;
+    margin-top: 40px;
     display: flex;
-    height: 100vh;
+    width: 17vw;
+    height: 87vh;
+    flex-grow: 1;
     flex-direction: column-reverse;
     justify-content: center;
     align-content: center;
-    flex-grow: 0;
     border: 3px solid rgba(29, 21, 21, 0.719);
     background-color:rgba(41, 38, 38, 1);
     order: 0;
@@ -58,21 +60,23 @@
   }
   .left_full {
     position: absolute;
+    margin: 0;
     width: 100%;
-    height: 100vh;
-    top: 50px;
+    height: 87vh;
+    top: 40px;
     z-index: 10000;
   }
 
   .right{
     box-sizing: border-box;
     position: relative;
+    margin-top: 40px;
     display: flex;
-    height: 100vh;
+    height: 87vh;
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    flex-grow: 0;
+    flex-grow: 1;
     border: 3px solid rgba(29, 21, 21, 0.719);
     background-color:rgba(41, 38, 38, 1);
     order: 2;
@@ -80,9 +84,10 @@
   }
   .right_full{
     position: absolute;
-    top: 50px;
+    margin: 0;
+    top: 40px;
     width: 100%;
-    height: 100vh;
+    height: 87vh;
     z-index: 10000;
 
     .graph{
@@ -98,8 +103,8 @@
     box-sizing: border-box;
     position: absolute;
     visibility: hidden;
-    top: -10px;
-    right: -3px;
+    top: 0px;
+    right: 0px;
     width: 20px;
     height: 20px;
     border: none;
@@ -120,38 +125,35 @@
     height: 50%;
   }
   .graph{
+    margin: 0 auto;
     display: flex;
-    justify-content: center;
-    width: 400px;
+    width: 27vw;
   }
 
-  @media screen and (max-width: 1180px) {
+  @media screen and (max-width: 1023px) {
     .center{
-      margin: 10px 0 0 0;
+      margin: 30px 0 0 0;
       padding: 10px;
       width: 100%;
       height: 100vh;
-      flex-grow: none;
     }
     .left{
-      margin: 10px 0 0 0;
+      margin: 30px 0 0 0;
       padding: 10px;
       width: 100%;
       height: 100vh;
-      flex-grow: none;
     }
     .right{
-      margin: 10px 0 0 0;
+      margin: 30px 0 0 0;
       padding: 10px;
       width: 100%;
       height: 100vh;
-      flex-grow: none;
     }
     .graph{
       margin: 0 auto;
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 50%;
+      width: 70%;
     }
   }
