--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,8 +15,15 @@ body {
   padding: 0;
 }
 
-footer{
+footer {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+
+}
+footer span{
+  color: rgb(207, 82, 82);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  font-weight: 800;
 }
