--- a/src/styles/tables.scss
+++ b/src/styles/tables.scss
@@ -1,6 +1,6 @@
 .list {
   width: 300px;
-  height: 720px;
+  height: 600px;
   padding: 8px;
   display: flex;
   flex-direction: column;
@@ -23,7 +23,7 @@
     outline: 1px solid gray;
 
     select {
-      width: 60%;
+      width: 90%;
     }
 
     .total-number {
@@ -37,14 +37,14 @@
     outline: 1px solid gray;
 
     .cases-by-country__list {
-      height: 500px;
+      height: 350px;
       overflow-x: auto;
     }
 
     h1 {
       text-align: center;
       font-size: 1.5em;
-      line-height: 2em;
+      padding: 4px;
     }
 
     div {
@@ -52,7 +52,7 @@
       padding: 3px;
 
       span:first-child {
-        margin-right: 20px;
+        margin-right: 16px;
         font-weight: bold;
         color: red;
       }
@@ -84,6 +84,7 @@
   table {
     width: 100%;
     border-spacing: 0;
+    border: 1px solid silver;
 
     tr {
       td {
@@ -91,19 +92,25 @@
         border-top: 1px solid silver;
       }
       td:first-child {
-        width: 40%;
+        // width: 40%;
       }
-      td:last-child {
-        font-weight: bold;
-      }
-      .td-confirmed {
+      .td-cases {
         color: rgb(255, 174, 0);
+        font-weight: bold;
       }
       .td-deaths {
         color: red;
+        font-weight: bold;
       }
       .td-recovered {
         color: green;
+        font-weight: bold;
+      }
+    }
+
+    tr:first-child {
+      td {
+        border-top: none;
       }
     }
   }
