--- a/src/styles/world-map.scss
+++ b/src/styles/world-map.scss
@@ -110,8 +110,9 @@
 .leaflet-interactive {
   transition: all .3s;
 }
+
 .map-wrapper{
-  margin-top: 1vh;
+  margin: 1vh;
   height: 70vh;
   padding: 10px;
 }
