--- a/src/styles/world-map.scss
+++ b/src/styles/world-map.scss
@@ -111,7 +111,8 @@
   transition: all .3s;
 }
 .map-wrapper{
-  margin-top: 1vh;
+  margin: 0 auto;
+  width: 100%;
   height: 70vh;
   padding: 10px;
 }
