--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,3 +28,13 @@ footer span{
   font-size: 24px;
   font-weight: 800;
 }
+
+.color-cases {
+  color: red;
+}
+.color-deaths {
+  color: darkorchid;
+}
+.color-recovered {
+  color: green;
+}
