--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    flex-wrap: wrap;
     background-color:rgba(0, 0, 0, 1);
   }
 
@@ -153,6 +152,10 @@
   }
 
   @media screen and (max-width: 1023px) {
+    .grid {
+      flex-wrap: wrap;
+    }
+  
     .center{
       margin: 30px 0 0 0;
       padding: 10px;
@@ -173,6 +176,7 @@
     }
     .graph{
       margin: 0 auto;
-      width: 70%;
+      width: 100%;
+      height: 70%;
     }
   }
